[project]
name = "meow"
version = "0.0.1"
description = "OSS self-hostable agentic GitHub collaborator powered by Mistral."
license = "Apache-2.0"
authors = [
    { name = "Clement PARPAILLON", email = "clem.parpaillon@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "koyeb-sdk>=1.4.6",
    "fastapi>=0.136.1",
    "githubkit>=0.15.5",
    "mistralai-workflows>=3.4.0",
    "pathspec>=1.1.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.13.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.47.0",
    "python-json-logger>=4.1.0",
    "mistralai-workflows-plugins-mistralai>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cryptography>=48.0.0",
    "httpx>=0.28.1",
    "lefthook>=2.1.8",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "ty>=0.0.38",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
